<resources>
    <string name="app_name" translatable="false">Mahami</string>
    <string name="welcome_to_task_management" translatable="false">Welcome To Mahami App</string>
    <string name="welcome_to_task_management2" translatable="false">Lest Go >>></string>
    <string name="welcome_back" translatable="true">Welcome Back</string>
    <string name="welcome_Splash2" translatable="false">Leave all your tasks to us</string>
    <string name="welcome_2_Splash_2" translatable="false">We manage all your tasks properly </string>
    <string name="navigation_drawer_open"> Open navigation drawer</string>
    <string name="navigation_drawer_close"> Close navigation drawer</string>
    <string name="Ques">What Would You Do ?</string>
    <string name="Ques2">Set A New Task ?</string>
    <string name="new_task">New Task</string>
    <string name="task_manger">Task List</string>
    <string name="About_us">About Us</string>
    <string name="Feedback">Feedback</string>
    <string name="Bio">Bio</string>
    <string name="Profile">Profile</string>
    <string name="user_name">User Name</string>
    <string name="set_data">Set Date</string>
    <string name="Submit">Submit</string>
    <string name="Update">Update</string>
    <string name="task_name">Task Name</string>
    <string name="description">Description</string>
    <string name="set_time">Set Time</string>
    <string name="submit">Submit</string>
    <string name="send_feed">Send</string>
    <string name="Discrip">What is your impression of the application</string>
    <string name="add_a_comment">Add Feedback</string>
    <string name="set_timer">Set Time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="singup">Sing Up Now</string>
    <string name="singup2">Sing Up </string>
    <string name="forgetpssowrd">ForgetPssowrd ?</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="sitting">Sitting</string>
    <string name="communicate">Communicate</string>
    <string name="about_us">About Us</string>
    <string name="share">Share</string>
    <string name="exit">Log Out</string>
    <string name="log_out">Log Out</string>
    <string name="setting_profile_text"> Account settings </string>
    <string name="setting_app"> Application settings </string>
    <string name="upload_photo">Upload Your Photo</string>
    <string name="discription_Us">Our application is to add your tasks to your appointment, and the application reminds you of the task to be completed at the time specified for it, a free application, easy handling</string>
    <string name="view_task_on_db">View Tasks</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="your_name">Your Name</string>
    <string name="now">Now</string>
    <string name="New_Task">New Task</string>
    <string name="Last_Task">Last Task</string>
    <string name="setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="safety">Safety</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="dont_have_account_yet">don\'t have account yet ?</string>
    <string name="submit_user_name">Submit Name</string>


</resources>