<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Sing_up_Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/cairo"
        android:text="@string/welcome_back"
        android:textColor="#434175"
        android:textSize="21sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="TODO"
        android:src="@drawable/bakc2" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:background="@drawable/input_looks"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/cairo"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="#6C63FF"
        android:textColorHint="#AAAAAA" />

    <EditText
        android:id="@+id/edit_pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:background="@drawable/input_looks"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/cairo"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:padding="16dp"
        android:textColor="#6C63FF"
        android:textColorHint="#AAAAAA" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:background="@drawable/login_btn_background"
        android:fontFamily="@font/cairo"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_singup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/cairo"
        android:text="@string/dont_have_account_yet"
        android:textSize="16sp" />

    <Button
        android:id="@+id/Singup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_singup"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background"
        android:fontFamily="@font/cairo"
        android:text="@string/singup"
        android:textAllCaps="false"
        android:textColor="#3E3E3E"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>