<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Sitteng">

    <androidx.cardview.widget.CardView
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:text="@string/setting"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="3dp"
                android:text="@string/notification"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                android:drawableStart="@drawable/ic_baseline_notifications_24"
                android:padding="14dp"/>

            <TextView
                android:id="@+id/lang"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="3dp"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:drawableLeftCompat="@drawable/ic_language"
                android:padding="14dp"
                android:drawableRight="@drawable/ic_baseline_navigate_next_24"
               />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:text="@string/sofety"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="3dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:drawableLeftCompat="@drawable/ic_baseline_privacy_tip_24"
                android:padding="14dp"
                android:drawableRight="@drawable/ic_baseline_navigate_next_24"

                />

            <TextView
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="3dp"
                android:text="@string/terms_and_conditions"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:padding="14dp"
                android:drawableRight="@drawable/ic_baseline_navigate_next_24"

                app:drawableLeftCompat="@drawable/ic_baseline_indeterminate_check_box_24"

                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>